# claude-fantasymanager

./: .env.example  .gitignore  .lintstagedrc.json  CLAUDE.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
.claude/commands/: primer.md  spec.md
.devcontainer/: devcontainer.json  docker-compose.dev.yml  post-create.sh
_plans/: adp-integration.md  historical-seasons.md  league-team-refactor.md  mvp-implementation.md  projectPlan.md  roster-history.md  scaffolding.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 79e69dc8a36c_initial_models.py  add_week_to_transactions.py  b3c4d5e6f7a8_add_player_adp_and_league_type.py  c4d5e6f7a8b9_add_previous_league_id_to_leagues.py  d5e6f7a8b9c0_create_team_bye_weeks_table.py  e6f7a8b9c0d1_fix_user_leagues_constraints.py  f7a8b9c0d1e2_add_matchup_starters_json.py
backend/app/: main.py
backend/app/adp/: base.py  dynastyprocess.py  ffc.py  registry.py  sleeper.py  sync.py
backend/app/api/: adp.py  auth.py  health.py  leagues.py  platforms.py  sync.py
backend/app/auth/: __init__.py  dependencies.py  tokens.py
backend/app/core/: config.py  database.py  season.py
backend/app/models/: __init__.py  enums.py  league.py  matchup.py  platform_account.py  player.py  player_adp.py  player_score.py  projected_score.py  roster.py  standing.py  sync_log.py  team_bye_week.py  transaction.py  user.py  user_league.py
backend/app/schemas/: __init__.py  adp.py  auth.py  league.py  platform_account.py  sync.py  user.py
backend/app/sync/: bye_weeks.py  engine.py  player_import.py  scheduler.py
backend/tests/: conftest.py  factories.py  test_adp_api.py  test_adp_providers.py  test_adp_sync.py  test_auth.py  test_bye_weeks.py  test_health.py  test_leagues_api.py  test_platform_accounts.py  test_sleeper_adapter.py  test_sync_api.py  test_sync_engine.py
docs/: ARCHITECTURE.md  DATA_MODEL.md  PLAN-league-detail-v2.md  PRODUCT.md  ROADMAP.md  UI.md  USER_GUIDE.md
frontend/: eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo
frontend/e2e/: playwright.config.ts
frontend/e2e/tests/: auth.spec.ts  dashboard.spec.ts  health.spec.ts  league-detail.spec.ts  link-accounts.spec.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/api/: adp.ts  client.ts  leagues.ts  platforms.ts  season.ts  sync.ts  types.ts
frontend/src/components/: EmptyState.tsx  Layout.tsx  LeagueCard.tsx  PlayerADPModal.tsx  ProtectedRoute.tsx  SyncButton.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useLeagues.ts  useSyncStatus.ts
frontend/src/pages/: DashboardPage.tsx  LeagueDetailPage.tsx  LinkAccountsPage.tsx  LoginPage.tsx  NotFoundPage.tsx  RegisterPage.tsx
